--- a/yumehyaku/ViewController/TopViewController/Base.lproj/Main.storyboard
+++ b/yumehyaku/ViewController/TopViewController/Base.lproj/Main.storyboard
@@ -11,17 +11,62 @@
         <!--Top View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="TopViewController" customModule="yumehyaku" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController wantsFullScreenLayout="YES" id="BYZ-38-t0r" customClass="TopViewController" customModule="yumehyaku" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kcz-xq-vaI">
+                                <rect key="frame" x="0.0" y="748" width="393" height="70"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="70" id="APy-bi-eB5"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Nbd-OO-7SB">
+                                <rect key="frame" x="0.0" y="150" width="393" height="598"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="FyI-6m-aUO">
+                                <rect key="frame" x="30" y="109" width="333" height="32"/>
+                                <segments>
+                                    <segment title="一覧"/>
+                                    <segment title="カテゴリ"/>
+                                    <segment title="期限"/>
+                                </segments>
+                            </segmentedControl>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bLD-Ly-hvq">
+                                <rect key="frame" x="0.0" y="59" width="393" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="wnX-z8-z7R"/>
+                                </constraints>
+                                <items>
+                                    <navigationItem title="Title" id="Mlr-pS-EYv"/>
+                                </items>
+                            </navigationBar>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Nbd-OO-7SB" firstAttribute="top" secondItem="FyI-6m-aUO" secondAttribute="bottom" constant="10" id="D28-Ft-dxb"/>
+                            <constraint firstItem="Nbd-OO-7SB" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="FfN-7z-fB2"/>
+                            <constraint firstItem="bLD-Ly-hvq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="UBO-Xt-1O7"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="FyI-6m-aUO" secondAttribute="trailing" constant="30" id="VwC-8G-nNZ"/>
+                            <constraint firstItem="bLD-Ly-hvq" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="bJZ-fS-unp"/>
+                            <constraint firstItem="kcz-xq-vaI" firstAttribute="top" secondItem="Nbd-OO-7SB" secondAttribute="bottom" id="bNt-wl-2gI"/>
+                            <constraint firstItem="bLD-Ly-hvq" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="eQ7-GF-BfD"/>
+                            <constraint firstItem="FyI-6m-aUO" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="fHu-D4-XJE"/>
+                            <constraint firstItem="kcz-xq-vaI" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="fn0-mY-AUB"/>
+                            <constraint firstItem="Nbd-OO-7SB" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="lEA-NA-wC4"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="kcz-xq-vaI" secondAttribute="trailing" id="mQe-NS-rtE"/>
+                            <constraint firstItem="kcz-xq-vaI" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="scP-bF-b86"/>
+                            <constraint firstItem="FyI-6m-aUO" firstAttribute="top" secondItem="bLD-Ly-hvq" secondAttribute="bottom" constant="20" id="wWr-1f-cTZ"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="18" y="-2"/>
+            <point key="canvasLocation" x="17.557251908396946" y="-2.1126760563380285"/>
         </scene>
     </scenes>
     <resources>
