--- a/yumehyaku/ViewController/TopViewController/Base.lproj/Main.storyboard
+++ b/yumehyaku/ViewController/TopViewController/Base.lproj/Main.storyboard
@@ -26,6 +26,16 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Nbd-OO-7SB">
                                 <rect key="frame" x="0.0" y="150" width="393" height="598"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="MKC-pD-OrJ">
+                                        <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="MKC-pD-OrJ" id="4Wp-bN-V5O">
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="43.666667938232422"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
                             </tableView>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="FyI-6m-aUO">
                                 <rect key="frame" x="30" y="109" width="333" height="32"/>
@@ -63,6 +73,12 @@
                             <constraint firstItem="FyI-6m-aUO" firstAttribute="top" secondItem="bLD-Ly-hvq" secondAttribute="bottom" constant="20" id="wWr-1f-cTZ"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="bannerView" destination="kcz-xq-vaI" id="f07-kX-Ebw"/>
+                        <outlet property="navigationBar" destination="bLD-Ly-hvq" id="agK-6b-NyZ"/>
+                        <outlet property="segment" destination="FyI-6m-aUO" id="MUq-uZ-A03"/>
+                        <outlet property="tableView" destination="Nbd-OO-7SB" id="dX7-gF-2Fo"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
