--- a/yumehyaku/ViewController/TopViewController/Base.lproj/Main.storyboard
+++ b/yumehyaku/ViewController/TopViewController/Base.lproj/Main.storyboard
@@ -27,13 +27,68 @@
                                 <rect key="frame" x="0.0" y="150" width="393" height="598"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="MKC-pD-OrJ">
-                                        <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="YumelistCell" rowHeight="113" id="MKC-pD-OrJ" customClass="YumelistCell" customModule="yumehyaku" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="50" width="393" height="113"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="MKC-pD-OrJ" id="4Wp-bN-V5O">
-                                            <rect key="frame" x="0.0" y="0.0" width="393" height="43.666667938232422"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="113"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="タイトル" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ga9-Sv-MGX">
+                                                    <rect key="frame" x="10" y="10" width="283" height="25"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="25" id="0La-rS-pyE"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="25"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="期限" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vfp-3O-J1j">
+                                                    <rect key="frame" x="10" y="45" width="283" height="15"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="15" id="lon-WY-tPu"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="期限まで残り何日" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T06-2Y-ga4">
+                                                    <rect key="frame" x="10" y="70" width="283" height="20"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="20" id="cLb-4k-hCM"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="V14-NP-3NA">
+                                                    <rect key="frame" x="298" y="5" width="90" height="103"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="90" id="0N5-bJ-kMe"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="T06-2Y-ga4" firstAttribute="top" secondItem="vfp-3O-J1j" secondAttribute="bottom" constant="10" id="DHD-E2-VqN"/>
+                                                <constraint firstAttribute="bottom" secondItem="V14-NP-3NA" secondAttribute="bottom" constant="5" id="Gll-32-QKi"/>
+                                                <constraint firstItem="ga9-Sv-MGX" firstAttribute="leading" secondItem="4Wp-bN-V5O" secondAttribute="leading" constant="10" id="KfZ-qN-VPl"/>
+                                                <constraint firstItem="V14-NP-3NA" firstAttribute="top" secondItem="4Wp-bN-V5O" secondAttribute="top" constant="5" id="L4x-Gf-jdb"/>
+                                                <constraint firstAttribute="trailing" secondItem="vfp-3O-J1j" secondAttribute="trailing" constant="100" id="PKM-17-XLn"/>
+                                                <constraint firstAttribute="trailing" secondItem="V14-NP-3NA" secondAttribute="trailing" constant="5" id="PfI-Qq-zVK"/>
+                                                <constraint firstItem="vfp-3O-J1j" firstAttribute="top" secondItem="ga9-Sv-MGX" secondAttribute="bottom" constant="10" id="cuM-yZ-10R"/>
+                                                <constraint firstItem="vfp-3O-J1j" firstAttribute="leading" secondItem="4Wp-bN-V5O" secondAttribute="leading" constant="10" id="fEH-6c-pow"/>
+                                                <constraint firstAttribute="trailing" secondItem="T06-2Y-ga4" secondAttribute="trailing" constant="100" id="gDC-tZ-KBQ"/>
+                                                <constraint firstItem="T06-2Y-ga4" firstAttribute="leading" secondItem="4Wp-bN-V5O" secondAttribute="leading" constant="10" id="hy4-Dh-ktv"/>
+                                                <constraint firstItem="ga9-Sv-MGX" firstAttribute="top" secondItem="4Wp-bN-V5O" secondAttribute="top" constant="10" id="r9g-8f-aqd"/>
+                                                <constraint firstAttribute="trailing" secondItem="ga9-Sv-MGX" secondAttribute="trailing" constant="100" id="vhc-1v-43Z"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="imageView" destination="V14-NP-3NA" id="O8f-Vl-NWh"/>
+                                            <outlet property="limitDayLabel" destination="T06-2Y-ga4" id="WWT-bR-HOD"/>
+                                            <outlet property="limitLabel" destination="vfp-3O-J1j" id="toj-db-ZWF"/>
+                                            <outlet property="titleLabel" destination="ga9-Sv-MGX" id="AdY-KR-Jkh"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
