--- a/yumehyaku/ViewController/TopViewController/Base.lproj/Main.storyboard
+++ b/yumehyaku/ViewController/TopViewController/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="7MM-bm-0w4">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
@@ -8,6 +8,22 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Navigation Controller-->
+        <scene sceneID="n1v-HB-NDb">
+            <objects>
+                <navigationController id="7MM-bm-0w4" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Mvm-Wm-d6C">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="R31-an-uBr"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2oe-mJ-WiL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-857" y="-2"/>
+        </scene>
         <!--Top View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -24,7 +40,7 @@
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Nbd-OO-7SB">
-                                <rect key="frame" x="0.0" y="150" width="393" height="598"/>
+                                <rect key="frame" x="0.0" y="149" width="393" height="599"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="YumelistCell" rowHeight="113" id="MKC-pD-OrJ" customClass="YumelistCell" customModule="yumehyaku" customModuleProvider="target">
@@ -93,44 +109,32 @@
                                 </prototypes>
                             </tableView>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="FyI-6m-aUO">
-                                <rect key="frame" x="30" y="109" width="333" height="32"/>
+                                <rect key="frame" x="30" y="108" width="333" height="32"/>
                                 <segments>
                                     <segment title="一覧"/>
                                     <segment title="カテゴリ"/>
                                     <segment title="期限"/>
                                 </segments>
                             </segmentedControl>
-                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bLD-Ly-hvq">
-                                <rect key="frame" x="0.0" y="59" width="393" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="wnX-z8-z7R"/>
-                                </constraints>
-                                <items>
-                                    <navigationItem title="Title" id="Mlr-pS-EYv"/>
-                                </items>
-                            </navigationBar>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="Nbd-OO-7SB" firstAttribute="top" secondItem="FyI-6m-aUO" secondAttribute="bottom" constant="10" id="D28-Ft-dxb"/>
                             <constraint firstItem="Nbd-OO-7SB" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="FfN-7z-fB2"/>
-                            <constraint firstItem="bLD-Ly-hvq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="UBO-Xt-1O7"/>
+                            <constraint firstItem="FyI-6m-aUO" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="5" id="TQf-yo-rxV"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="FyI-6m-aUO" secondAttribute="trailing" constant="30" id="VwC-8G-nNZ"/>
-                            <constraint firstItem="bLD-Ly-hvq" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="bJZ-fS-unp"/>
                             <constraint firstItem="kcz-xq-vaI" firstAttribute="top" secondItem="Nbd-OO-7SB" secondAttribute="bottom" id="bNt-wl-2gI"/>
-                            <constraint firstItem="bLD-Ly-hvq" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="eQ7-GF-BfD"/>
                             <constraint firstItem="FyI-6m-aUO" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="fHu-D4-XJE"/>
                             <constraint firstItem="kcz-xq-vaI" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="fn0-mY-AUB"/>
                             <constraint firstItem="Nbd-OO-7SB" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="lEA-NA-wC4"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="kcz-xq-vaI" secondAttribute="trailing" id="mQe-NS-rtE"/>
                             <constraint firstItem="kcz-xq-vaI" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="scP-bF-b86"/>
-                            <constraint firstItem="FyI-6m-aUO" firstAttribute="top" secondItem="bLD-Ly-hvq" secondAttribute="bottom" constant="20" id="wWr-1f-cTZ"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="MTb-rX-cge"/>
                     <connections>
                         <outlet property="bannerView" destination="kcz-xq-vaI" id="f07-kX-Ebw"/>
-                        <outlet property="navigationBar" destination="bLD-Ly-hvq" id="agK-6b-NyZ"/>
                         <outlet property="segment" destination="FyI-6m-aUO" id="MUq-uZ-A03"/>
                         <outlet property="tableView" destination="Nbd-OO-7SB" id="dX7-gF-2Fo"/>
                     </connections>
