--- a/yumehyaku/ViewController/TopViewController/Base.lproj/Main.storyboard
+++ b/yumehyaku/ViewController/TopViewController/Base.lproj/Main.storyboard
@@ -99,6 +99,7 @@
                                                 <constraint firstAttribute="trailing" secondItem="ga9-Sv-MGX" secondAttribute="trailing" constant="100" id="vhc-1v-43Z"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" systemColor="systemGray6Color"/>
                                         <connections>
                                             <outlet property="imageView" destination="V14-NP-3NA" id="O8f-Vl-NWh"/>
                                             <outlet property="limitDayLabel" destination="T06-2Y-ga4" id="WWT-bR-HOD"/>
@@ -150,6 +151,9 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray6Color">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
